 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-07-08
r1620 add Strability Control function
- gather isnan flag in Loop()

--------------------------
2015-07-05
r1619 modify Vspec implementation
- encVbitIBC(), encVbitIBCrev(), encVbitOBC()
- expire VBC_UWD flag

--------------------------
2015-06-30
r1618 suppress error message in mergeSameSolidCell()
- expire paintCutOnPoint()

--------------------------
2015-06-29
r1617 setUncut9
- add mergeSameSolidCell()

--------------------------
2015-06-28
r1616 ssor test
- add core_psor.h, core_sor2sma.h

r1615 segmentation of multi-material
- add *cmp and *mat in Geometry class
- brush up algorithms in Geometry

--------------------------
2015-06-21
r1614 update polynomial6
- introduce ffvc-config
- introduce dryrunBC()
- modify extractVelLBC() and related parts
- expire mask for residuals in psor_() and psor2sma_core_()

--------------------------
2015-06-20
r1613 modify bicg mask
- remove mask from blas_calc_rk_() and blas_calc_ax_() to make stable

r1612 replacing if-branch in psor_() and psor2sma_core_()
- rm VLD_CNVG >> active_bit
- modify encPbit(), encPbitN(), norm_v_div_l2_(), norm_v_div_max_()
- replacing if-branch to mask combination in psor_(), psor2sma_core_()

r1611 add ffvc-config
- arrange Geometry.C

--------------------------
2015-06-18
r1610 set state in Geometry::paintCutOnPoint()
- move onBit()/offBit() from VoxInfo.h to FB_Define.h
- add special BC polynomial6 for chiba-u
- modify quantizeCut()
- add range for Glyph

--------------------------
2015-06-14
r1609 bug fix on Fujitsu sparc => Geometry.C L257