@@ -181,12 +181,12 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/missing aclocal-1.15
+ACLOCAL = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/missing autoconf
-AUTOHEADER = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/missing autoheader
-AUTOMAKE = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/missing automake-1.15
+AUTOCONF = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/missing autoconf
+AUTOHEADER = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/missing autoheader
+AUTOMAKE = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/missing automake-1.15
 AWK = awk
 CC = mpicc
 CCDEPMODE = depmode=gcc3
@@ -231,7 +231,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/missing makeinfo
+MAKEINFO = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/missing makeinfo
 MAKE_SUB_DIRS = src/IP src/FB src/F_CORE src/F_LS src/FILE_IO src/ASD src/Geometry src/FFV src src/Util_Combsph doc
 MKDIR_P = /usr/local/bin/gmkdir -p
 MPICH_CFLAGS = 
@@ -263,10 +263,10 @@ TP_CFLAGS = -I/usr/local/FFV/TextParser/include
 TP_DIR = /usr/local/FFV/TextParser
 TP_LDFLAGS = -L/usr/local/FFV/TextParser/lib -lTPmpi
 VERSION = 2.3.6
-abs_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/BUILD_DIR/doc
-abs_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/BUILD_DIR/../doc
-abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/BUILD_DIR
-abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/BUILD_DIR/..
+abs_builddir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR/doc
+abs_srcdir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR/../doc
+abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR
+abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR/..
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = ifort
@@ -288,7 +288,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.3.5/config/install-sh
+install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
